--- a/Booki/style.css
+++ b/Booki/style.css
@@ -15,8 +15,8 @@ html{
 }
 
 
-p, .hebergements-nav, .activite-nav, .eco, .fam, .romantic, .pet, .rechercher, .marseille, .afficher, #footer-links, 
-.filtre-h3, a{ 
+p, .hebergements-nav, .activite-nav, .eco, .fam, .romantic, .pet, .rechercher, 
+.marseille, .afficher, #footer-links, .filtre-h3, a{ 
     font-family: var(--font-fam);
     font-size: var(--font-desktop-normal);
     color: var(--text-color);
@@ -68,8 +68,8 @@ a{
 }
 
 .logo{
-    height: 20%;
-    width: 10%;
+    height: 50px;
+    width: 100px;
     margin-top: 24px;
     margin-left: 48px;
 }
@@ -105,6 +105,7 @@ a{
     flex-direction: column;
     width: var(--breakpoints-desktop); 
     margin: 0;
+    min-width: 0;
 }
 
 .contain-search{
@@ -120,12 +121,13 @@ h1 {
 
 p{
     padding-top: 8px;
-    padding-bottom: 12px;
+    padding-bottom: 16px;
     margin: 0;
 }
 
 .search{ /*Les mises en forme des boutons se font dans le fichier btn-icons-cards-anim*/
     display: flex;
+    margin-bottom: 16px;
 }
 
 .rechercher { 
@@ -138,12 +140,15 @@ p{
     display: flex;
     margin: var(--margin-main);
     padding-top: 8px;
+    flex-wrap: wrap;
 }
 
 .filtre-h3{
     justify-self: center;
     align-self: center;
     flex-basis: 7%;
+    margin-right: clamp(8px, 1vw, 12px);
+    margin-bottom: clamp(8px, 1vw, 16px);
 }
 
 
@@ -165,7 +170,7 @@ p{
     width: var(--breakpoints-desktop);
     background-color: var(--grey);
     margin: 32px 0 0 0;
-    height: 200px;
+    height: 300px;
 }
 
 .a-propos{
