--- a/Booki/media-queries.css
+++ b/Booki/media-queries.css
@@ -48,8 +48,9 @@
     }
 
     .logo{
-        padding:0;
-        margin: 24px 45% 24px 40%;
+        padding-top:24px;
+        padding-bottom: 24px;
+        margin: auto;
         height:  60px;
         width:  100px;
     }
@@ -95,7 +96,7 @@
 
     h1{
         margin: 0;
-        padding: 0 25% 2% 0;
+        padding: 24px 24px 16px 0;
     }
 
     p{
